server/compilers/goLiteJS/src/test/ml1/invalid/package7.go
// variable declaration before package declaration
var x int

package main
